[package]
name = "whitesmith"
version = "0.1.2"
authors = ["rloic <loic.rouquette@insa-lyon.fr>"]
edition = "2018"
repository = "https://github.com/rloic/whitesmith"

[dependencies]
humantime = "2.1.0"
humantime-serde = "1.0.1"
wait-timeout = "0.2.0"
clap = "2.33.3"
colored = "2.0.0"
ron="0.6.4"
serde = "1.0.125"
rev_lines = "0.2.1"
zip = "0.5.11"
chrono = "0.4.19"
termimad = "0.14.2"
crossterm = "0.20.0"
human-sort = "0.2.2"