[package]
name = "whitesmith"
version = "0.5.0"
authors = ["rloic <loic.rouquette@insa-lyon.fr>"]
edition = "2018"
repository = "https://github.com/rloic/whitesmith"

[dependencies]
humantime = "2.1.0"
humantime-serde = "1.0.1"
wait-timeout = "0.2.0"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
ron= "0.8.0"
serde = "1.0.125"
rev_lines = "0.3.0"
zip = "0.6.6"
chrono = "0.4.19"
termimad = "0.23.1"
crossterm = "0.26.1"
human-sort = "0.2.2"
ctrlc = "3.4.0"
once_cell = "1.18.0"
rlimit = "0.9.1"
bytesize = {version = "1.2.0", features = ["serde"]}
serde_json = "1.0.99"
csv = "1.2.2"
threadpool = "1.8.1"
eval = "0.4.3"